# iclib

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  check_restore_suspend.gdb  common.cmake  msp430-toolchain.cmake  msp430fr5994-fram-only.ld  msp430fr5994.ld  sourceme  tail.cmake
activity-recognition/: CMakeLists.txt  activity.c
aes/: CMakeLists.txt  debug.gdb  generate-reference-output.c  lipsum.h  main.c
aes128/: CMakeLists.txt  generate-reference-output.c  lipsum.h  main.c  reference-output.txt  refgen
apps/: CMakeLists.txt
apps/activity-recognition/: CMakeLists.txt  activity.c
apps/aes/: CMakeLists.txt  TI_aes_128_encr_only.c  generate-reference-output.c  lipsum.h  main.c
apps/bc/: CMakeLists.txt  main.c
apps/cem/: CMakeLists.txt  main.c
apps/crc/: CMakeLists.txt  crc_32.c  generate-reference-output.c  lipsum.h  main.c
apps/matmul/: CMakeLists.txt  generate-reference-output.c  input.h  main.c
apps/matmul-tiled/: CMakeLists.txt  generate-reference-output.c  main.c
apps/nn-gru-cmsis/: CMakeLists.txt  benchmark.c
bc/: CMakeLists.txt  main.c
blink/: CMakeLists.txt  blink.c
cem/: CMakeLists.txt  main.c
cmake/: cm0-toolchain.cmake  common.cmake  configure_ld.cmake  msp430-toolchain.cmake  tail.cmake
cmsis/: core_cm0.h
crc/: CMakeLists.txt  crc.h  crc_32.c  generate-reference-output.c  lipsum.h  main.c  reference-output.txt
crc32/: CMakeLists.txt  crc.h  crc_32.c  lipsum.h  main.c  refgen  sniptype.h
iclib/: CMakeLists.txt  cm0-ic.S  cm0-ic.c  cm0-ic.h  cm0_ic.S  cm0_ic.c  cm0_ic.h  common.c  common.h  config.h  dvdb-AS.h  dvdb-MS.h  dvdb.h  generate-threshold-table.py  ic.S  ic.c  ic.h  memory-management.c  memory-management.h  memory_management.c  memory_management.h  msp430-ic.c  msp430-ic.h  msp430_ic.c
lib/: CMakeLists.txt
lib/cmsis/: core_cm0.h
lib/iclib/: CMakeLists.txt  cm0-ic.S  cm0-ic.c  cm0-ic.h  config.h  ic.h  memory-management.c  memory-management.h  msp430-ic.c  msp430-ic.h
lib/support/: CMakeLists.txt  cm0-support.c  cm0-support.h  cm0-vectors.c  cm0.ld.in  msp430-support.c  support.h
matmul/: CMakeLists.txt  generate-reference-output.c  input.h  main.c
matmul-tiled/: CMakeLists.txt  generate-reference-output.c  input.h  main.c  refgen
support/: CMakeLists.txt  cm0-FS.ld  cm0-mram-only.ld  cm0-support.c  cm0-support.h  cm0-vectors.c  msp430-support.c  msp430-support.h  msp430fr5994-fram-only.ld  msp430fr5994.ld  support.h  test-common.h
