#
# Copyright (c) 2019-2020, University of Southampton and Contributors.
# All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause
#

add_subdirectory(aes)
add_subdirectory(matmul)
add_subdirectory(matmul-tiled)
add_subdirectory(crc)
add_subdirectory(activity-recognition)
add_subdirectory(cem)
add_subdirectory(bc)
add_subdirectory(nn-gru-cmsis)
add_subdirectory(qrencode)
